--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,26 @@
 ---
-
+import "../styles/global.css";
+import Preloader from "../components/Preloader.astro";
+import Header from "../components/Header.astro";
+import Hero from "../components/Hero.astro";
+import WhoCanApply from "../components/WhoCanApply.astro";
+import HowToApply from "../components/HowToApply.astro";
+import Footer from "../components/Footer.astro";
 ---
-
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>ILM-SA Bursary</title>
+  </head>
+  <body class="antialiased">
+    <Preloader />   <!-- <-- here -->
+    <Header />
+    <main id="main" class="scroll-mt-28">
+      <Hero />
+      <WhoCanApply />
+      <HowToApply />
+    </main>
+    <Footer />
+  </body>
 </html>
