--- a/src/components/WhoCanApply.astro
+++ b/src/components/WhoCanApply.astro
@@ -120,7 +120,7 @@ const headingCapsule =
         <article class={`${cardBase} ${toneClasses.background}`} data-animate>
           <div>
             <div class="mb-3">
-              <span class={headingCapsule}>Expectations for Accepted Applicants</span>
+              <span class={headingCapsule}>Expectations of Accepted Applicants</span>
             </div>
             <ul
               class="marker:text-[--brand-secondary] list-disc text-gray-800"
